--- a/Sriracha.Web/Web.config
+++ b/Sriracha.Web/Web.config
@@ -45,6 +45,7 @@
     <assemblies>
       <add assembly="System.Web.Optimization" />
       <add assembly="System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      <add assembly="SquishIt.Framework" />
     </assemblies>
     <namespaces>
       <add namespace="System.Web.Optimization" />
