--- a/Sriracha.Web/packages.config
+++ b/Sriracha.Web/packages.config
@@ -14,6 +14,7 @@
   <package id="Jurassic" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.2" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MMDB.Shared" version="2.0.0.21" targetFramework="net45" />
   <package id="MsieJavaScriptEngine" version="1.2.0" targetFramework="net45" />
@@ -23,6 +24,7 @@
   <package id="Nancy.Hosting.Aspnet" version="1.1" targetFramework="net45" />
   <package id="Nancy.Viewengines.Razor" version="1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="SquishIt" version="0.9.7" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
