--- a/DeployTask/Sriracha.DeployTask.WebApplication/Sriracha.DeployTask.WebApplication.csproj
+++ b/DeployTask/Sriracha.DeployTask.WebApplication/Sriracha.DeployTask.WebApplication.csproj
@@ -79,7 +79,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="nuget\Sriracha.DeployTask.WebApplication.csproj.nuspec" />
     <None Include="packages.config" />
+    <Content Include="Sample.DeployWebApplication.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="tools\Init.ps1" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
