--- a/Sriracha.Publisher/packages.config
+++ b/Sriracha.Publisher/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
-  <package id="Common.Logging" version="3.1.0" targetFramework="net45" />
-  <package id="Common.Logging.Core" version="3.1.0" targetFramework="net45" />
-  <package id="Common.Logging.NLog32" version="3.1.0" targetFramework="net45" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
+  <package id="Common.Logging.NLog32" version="3.3.1" targetFramework="net45" />
+  <package id="MMDB.Shared" version="2.0.0.21" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="NLog" version="3.2.0.0" targetFramework="net45" />
   <package id="RestSharp" version="105.0.1" targetFramework="net45" />
