--- a/Sriracha.Server/App.config
+++ b/Sriracha.Server/App.config
@@ -2,19 +2,19 @@
 <configuration>
   <configSections>
     <section name="razor" type="Nancy.ViewEngines.Razor.RazorConfigurationSection, Nancy.ViewEngines.Razor" />
-    <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+    
+  <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
-    </sectionGroup>
-  </configSections>
+    </sectionGroup></configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
     <add key="WebPath" value="..\..\..\Sriracha.Web" />
-    <add key="webPages:Enabled" value="false" />
+    
     <add key="RepositoryAssemblyName" value="Sriracha.Repository.LiteDB.dll" />
     <add key="LiteDBDirectory" value="..\..\..\LiteDBData" />
-  </appSettings>
+  <add key="webPages:Enabled" value="false" /></appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -47,13 +47,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.web.webPages.razor>
-    <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
-      <namespaces>
-        <add namespace="Nancy.ViewEngines.Razor" />
-      </namespaces>
-    </pages>
-  </system.web.webPages.razor>
+  
   <razor disableAutoIncludeModelNamespace="false">
     <assemblies>
       <add assembly="System.Web.Optimization" />
@@ -64,4 +58,10 @@
       <add namespace="System.Web.Optimization" />
     </namespaces>
   </razor>
-</configuration>
+<system.web.webPages.razor>
+    <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
+      <namespaces>
+        <add namespace="Nancy.ViewEngines.Razor" />
+      </namespaces>
+    </pages>
+  </system.web.webPages.razor></configuration>
