--- a/Sriracha.Web/Web.config
+++ b/Sriracha.Web/Web.config
@@ -6,41 +6,29 @@
 <configuration>
   <configSections>
     <section name="razor" type="Nancy.ViewEngines.Razor.RazorConfigurationSection, Nancy.ViewEngines.Razor" />
-    <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+    
+  <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
-    </sectionGroup>
-  </configSections>
+    </sectionGroup></configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
-      <buildProviders>
+      
+    <buildProviders>
         <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
         <add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
-      </buildProviders>
-    </compilation>
+      </buildProviders></compilation>
     <httpRuntime targetFramework="4.5" />
-    <httpHandlers>
+    
+  <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </httpHandlers>
-  </system.web>
-  <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
-    <httpErrors existingResponse="PassThrough" />
-    <handlers>
-      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </handlers>
-  </system.webServer>
+    </httpHandlers></system.web>
+  
   <appSettings>
-    <add key="webPages:Enabled" value="false" />
+    
     <add key="RepositoryAssemblyName" value="Sriracha.Repository.LiteDB.dll" />
     <add key="LiteDBDirectory" value="..\LiteDBData" />
-  </appSettings>
-  <system.web.webPages.razor>
-    <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
-      <namespaces>
-        <add namespace="Nancy.ViewEngines.Razor" />
-      </namespaces>
-    </pages>
-  </system.web.webPages.razor>
+  <add key="webPages:Enabled" value="false" /></appSettings>
+  
   <razor disableAutoIncludeModelNamespace="false">
     <assemblies>
       <add assembly="System.Web.Optimization" />
@@ -79,4 +67,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<system.web.webPages.razor>
+    <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
+      <namespaces>
+        <add namespace="Nancy.ViewEngines.Razor" />
+      </namespaces>
+    </pages>
+  </system.web.webPages.razor><system.webServer>
+    <validation validateIntegratedModeConfiguration="false" />
+    <httpErrors existingResponse="PassThrough" />
+    <handlers>
+      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+    </handlers>
+  </system.webServer></configuration>
